# newcreat

./: .gitignore  README.md
api-gateway/backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
api-gateway/backend/alembic/: env.py
api-gateway/backend/alembic/versions/: 6c835882e158_initial.py  7a1b2c3d4e5f_feedback.py  8b2c3d4e5f6g_ai_news.py  9c3d4e5f6a7b_feedback_reply.py  ad4e5f6a7b8c_digest_settings.py  be5f6a7b8c9d_user_digest_prefs.py  cf6a7b8c9d0e_battle_records.py  d1a2b3c4d5e6_add_wx_openid.py  e2f3a4b5c6d7_add_news_settings.py  f3a4b5c6d7e8_add_last_sent_date.py  fa43d14845ee_add_api_key_models.py  g4h5i6j7k8l9_add_is_sensitive.py  h5i6j7k8l9m0_add_avatar_url.py  i6j7k8l9m0n1_add_hub_content.py  j7k8l9m0n1o2_worldcup.py  k8l9m0n1o2p3_add_is_reasoning.py  l9m0n1o2p3q4_add_encryption_keys.py  m0n1o2p3q4r5_add_worldcup_data.py
api-gateway/backend/app/: cli.py  config.py  main.py  match_updater.py
api-gateway/backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
api-gateway/backend/app/data/: player_names.json
api-gateway/backend/app/middleware/: cors.py
api-gateway/backend/app/models/: ai_news.py  api_key.py  battle.py  billing.py  digest.py  encryption_key.py  feedback.py  hub_content.py  model_registry.py  news_setting.py  usage_log.py  user.py  user_digest.py  worldcup.py
api-gateway/backend/app/schemas/: ai_news.py  api_key.py  auth.py  model.py  (+7 more)
api-gateway/backend/scripts/: gen_sql.js  news-fetcher.service  news_fetcher_merged.py  seed_worldcup.py  squad_fetcher_addon.py
(+107 files in other folders)
